--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
     "start:build": "tsc -w",
     "start:run": "nodemon dist/server.js",
     "start": "concurrently npm:start:*"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
+    "@types/bcrypt": "^5.0.1",
+    "@types/cors": "^2.8.15",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.10",
+    "@types/express": "^4.17.20",
     "@types/joi": "^17.2.3",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/lodash": "^4.14.202",
-    "@types/mssql": "^9.1.4",
-    "@types/uuid": "^9.0.7",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/lodash": "^4.14.200",
+    "@types/mssql": "^9.1.2",
+    "@types/uuid": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,12 +24,18 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mssql": "^10.0.1",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.10",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
   }
 }
